// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preset returns expected config - defaults node 6 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-6.yml": "<PROJECT_ROOT>/lib/files/appveyor-6.yml",
        "lib/files/circleci-6.yml": "<PROJECT_ROOT>/lib/files/circleci-6.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-6.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-6.yml": "641986afce697c9e8351d34987fe0657bdec1fae8b9dcf4ef896d358ab8ee089",
        "lib/files/circleci-6.yml": "dcb6ff8ace44b1ce15bbc5bea4baf29592b061090026a31e7824722dba9f1269",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - defaults node 6+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-6+.yml": "<PROJECT_ROOT>/lib/files/appveyor-6+.yml",
        "lib/files/circleci-6+.yml": "<PROJECT_ROOT>/lib/files/circleci-6+.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6+.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-6+.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-6+.yml": "251406424b8cb49b1a8858ef7eb521ae57856964625daed85b591692e8f98e15",
        "lib/files/circleci-6+.yml": "d7ada4fec94d99d14f1cfc79160392b0c5f0499f9dd9ae49fd2fd5bc0736bb4c",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - defaults node 8 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-8.yml": "<PROJECT_ROOT>/lib/files/appveyor-8.yml",
        "lib/files/circleci-8.yml": "<PROJECT_ROOT>/lib/files/circleci-8.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-8.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-8.yml": "70c6174a960e80495eca240ba2516a933ff7f67abc1287de0d1a3068156448dc",
        "lib/files/circleci-8.yml": "309b68fe564cfb23b83269075da74d89597cb0b90978735580c50bdc1e9d6f64",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - defaults node 8+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-8+.yml": "<PROJECT_ROOT>/lib/files/appveyor-8+.yml",
        "lib/files/circleci-8+.yml": "<PROJECT_ROOT>/lib/files/circleci-8+.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8+.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-8+.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-8+.yml": "9a237c2fcea7a8f3e5e3d89a248a763f6c078803afc547ab18478b2083c82492",
        "lib/files/circleci-8+.yml": "83b84a147f99c8dc58b87303fc83f374b49e53204172e0d4b26a43d9669645f8",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - defaults node 10 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-10.yml": "<PROJECT_ROOT>/lib/files/appveyor-10.yml",
        "lib/files/circleci-10.yml": "<PROJECT_ROOT>/lib/files/circleci-10.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-10.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-10.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-10.yml": "f10642c8ced78fa8015fd1b40623e2940a2cc953147d5631ee57ab6144e82cc8",
        "lib/files/circleci-10.yml": "0b3f33221c70ec2ca3d14543833ae73938e1a1dd4bc68ee3c3bab1e27767f187",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true node 6 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-6.yml": "<PROJECT_ROOT>/lib/files/appveyor-6.yml",
        "lib/files/circleci-6.yml": "<PROJECT_ROOT>/lib/files/circleci-6.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-6.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-6.yml": "641986afce697c9e8351d34987fe0657bdec1fae8b9dcf4ef896d358ab8ee089",
        "lib/files/circleci-6.yml": "dcb6ff8ace44b1ce15bbc5bea4baf29592b061090026a31e7824722dba9f1269",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true node 6+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-6+.yml": "<PROJECT_ROOT>/lib/files/appveyor-6+.yml",
        "lib/files/circleci-6+.yml": "<PROJECT_ROOT>/lib/files/circleci-6+.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6+.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-6+.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-6+.yml": "251406424b8cb49b1a8858ef7eb521ae57856964625daed85b591692e8f98e15",
        "lib/files/circleci-6+.yml": "d7ada4fec94d99d14f1cfc79160392b0c5f0499f9dd9ae49fd2fd5bc0736bb4c",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true node 8 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-8.yml": "<PROJECT_ROOT>/lib/files/appveyor-8.yml",
        "lib/files/circleci-8.yml": "<PROJECT_ROOT>/lib/files/circleci-8.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-8.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-8.yml": "70c6174a960e80495eca240ba2516a933ff7f67abc1287de0d1a3068156448dc",
        "lib/files/circleci-8.yml": "309b68fe564cfb23b83269075da74d89597cb0b90978735580c50bdc1e9d6f64",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true node 8+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-8+.yml": "<PROJECT_ROOT>/lib/files/appveyor-8+.yml",
        "lib/files/circleci-8+.yml": "<PROJECT_ROOT>/lib/files/circleci-8+.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8+.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-8+.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-8+.yml": "9a237c2fcea7a8f3e5e3d89a248a763f6c078803afc547ab18478b2083c82492",
        "lib/files/circleci-8+.yml": "83b84a147f99c8dc58b87303fc83f374b49e53204172e0d4b26a43d9669645f8",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true node 10 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-10.yml": "<PROJECT_ROOT>/lib/files/appveyor-10.yml",
        "lib/files/circleci-10.yml": "<PROJECT_ROOT>/lib/files/circleci-10.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-10.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-10.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-10.yml": "f10642c8ced78fa8015fd1b40623e2940a2cc953147d5631ee57ab6144e82cc8",
        "lib/files/circleci-10.yml": "0b3f33221c70ec2ca3d14543833ae73938e1a1dd4bc68ee3c3bab1e27767f187",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true, windows false node 6 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-6.yml": "<PROJECT_ROOT>/lib/files/circleci-6.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-6.yml": "dcb6ff8ace44b1ce15bbc5bea4baf29592b061090026a31e7824722dba9f1269",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true, windows false node 6+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-6+.yml": "<PROJECT_ROOT>/lib/files/circleci-6+.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6+.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-6+.yml": "d7ada4fec94d99d14f1cfc79160392b0c5f0499f9dd9ae49fd2fd5bc0736bb4c",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true, windows false node 8 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-8.yml": "<PROJECT_ROOT>/lib/files/circleci-8.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-8.yml": "309b68fe564cfb23b83269075da74d89597cb0b90978735580c50bdc1e9d6f64",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true, windows false node 8+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-8+.yml": "<PROJECT_ROOT>/lib/files/circleci-8+.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8+.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-8+.yml": "83b84a147f99c8dc58b87303fc83f374b49e53204172e0d4b26a43d9669645f8",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true, windows false node 10 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-10.yml": "<PROJECT_ROOT>/lib/files/circleci-10.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-10.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-10.yml": "0b3f33221c70ec2ca3d14543833ae73938e1a1dd4bc68ee3c3bab1e27767f187",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - windows = false node 6 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-6.yml": "<PROJECT_ROOT>/lib/files/circleci-6.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-6.yml": "dcb6ff8ace44b1ce15bbc5bea4baf29592b061090026a31e7824722dba9f1269",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - windows = false node 6+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-6+.yml": "<PROJECT_ROOT>/lib/files/circleci-6+.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6+.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-6+.yml": "d7ada4fec94d99d14f1cfc79160392b0c5f0499f9dd9ae49fd2fd5bc0736bb4c",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - windows = false node 8 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-8.yml": "<PROJECT_ROOT>/lib/files/circleci-8.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-8.yml": "309b68fe564cfb23b83269075da74d89597cb0b90978735580c50bdc1e9d6f64",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - windows = false node 8+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-8+.yml": "<PROJECT_ROOT>/lib/files/circleci-8+.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8+.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-8+.yml": "83b84a147f99c8dc58b87303fc83f374b49e53204172e0d4b26a43d9669645f8",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - windows = false node 10 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-10.yml": "<PROJECT_ROOT>/lib/files/circleci-10.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-10.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-10.yml": "0b3f33221c70ec2ca3d14543833ae73938e1a1dd4bc68ee3c3bab1e27767f187",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;
